--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ input.item-quantity:hover, input.item-quantity:focus {
   -webkit-box-shadow: -10px 10px #505050;
           box-shadow: -10px 10px #505050;
   right: -1px;
-  z-index: 99;
+  z-index: 100;
 }
 
 .cart-preview-container ul {
@@ -178,6 +178,8 @@ input.item-quantity:hover, input.item-quantity:focus {
 }
 
 .cart-preview-container ul {
+  position: relative;
+  z-index: 300;
   padding: 40px 20px;
 }
 
@@ -1005,7 +1007,7 @@ footer span {
   opacity: 0;
   -webkit-transition: 1s;
   transition: 1s;
-  z-index: 100;
+  z-index: 0;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1025,7 +1027,7 @@ footer span {
 }
 
 .in-view {
-  z-index: 200;
+  z-index: 10;
   opacity: 1;
   width: calc(1000px - 40px);
   max-width: calc(100% - 40px);
